Simplify app structure for Vercel deployment - remove external dependencies

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,7 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "yes/apps/web/package.json",
-      "use": "@vercel/next",
-      "config": {
-        "distDir": ".next"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "yes/apps/web/$1"
-    }
-  ]
+  "buildCommand": "cd yes/apps/web && npm install && npm run build",
+  "outputDirectory": "yes/apps/web/.next",
+  "installCommand": "cd yes/apps/web && npm install",
+  "devCommand": "cd yes/apps/web && npm run dev"
 }
