--- a/.vercelignore
+++ b/.vercelignore
@@ -1,8 +1,9 @@
 node_modules
 .git
 .gitignore
-README.md
-.env*
-.vercel
 *.log
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
