--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,4 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "yes/apps/web/package.json",
-      "use": "@vercel/next"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "yes/apps/web/$1"
-    }
-  ]
+  "framework": "nextjs"
 }
