--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --port 3002",
@@ -21,6 +22,8 @@
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.5.0",
     "typescript": "5.9.2"
   }
 }
