--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "jspdf": "^3.0.3",
     "next": "^15.5.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-confirm-alert": "^3.0.6",
+    "react-dom": "^19.1.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^22.15.3",
